# actix-blog

./: .env  .gitignore  Cargo.toml  README.md
data/: actixdb.sqlite3
migrations/2023-07-29-105124_create_users/: up.sql
migrations/2023-07-29-105130_create_posts/: up.sql
migrations/2023-09-09-034223_create_post_likes/: down.sql  up.sql
src/: config.rs  main.rs  routes.rs  schema.rs
src/auth/: auth_middleware.rs  jwt_middleware.rs
src/db/: connection.rs
src/handlers/: auth.rs  home.rs  mod.rs  posts.rs  users.rs
src/models/: mod.rs  post.rs  post_like.rs  user.rs
src/responses/: error.rs
src/utils/: mod.rs  password_helper.rs  session_helper.rs  tera_filter.rs  tera_tags_helper.rs  token_helper.rs
src/viewmodels/: login.rs  post.rs  user.rs
static/css/: styles.css
templates/: base.html
templates/auth/: login.html
templates/home/: 404_not_found.html  index.html
templates/partial/: login_partial.html
templates/post/: create.html  edit.html  index.html
templates/user/: create.html  edit.html  edit_partial.html  profile.html  profile_partial.html
