[package]
name = "actixweb_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tera = "1"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.178", default-features = false, features = ["derive"] }
serde_json = "1.0.104"
chrono = "0.4.26"
env_logger = "0.10.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
jsonwebtoken = "8.3.0"
argon2 = "0.5.1"
rand_core = { version = "0.6.4", features = ["std"] }
chrono-humanize = "0.2.3"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-service = "2.0.2"
futures = "0.3.28"
futures-util = "0.3.28"
open = "5.0.0"
derive_more = "0.99.17"
